--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "react-xtermjs": "^1.0.10",
     "recharts": "^3.2.1",
     "remark-gfm": "^4.0.1",
+    "socks": "^2.8.7",
     "sonner": "^2.0.7",
     "speakeasy": "^2.0.0",
     "ssh2": "^1.16.0",
