--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -3,6 +3,9 @@ name: Auto Translate
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   translate:
     runs-on: ubuntu-latest
@@ -10,6 +13,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Translate with i18n-ai-translate
         uses: taahamahdi/i18n-ai-translate@master
