--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "express": "^5.1.0",
+    "i18n-auto-translation": "^2.2.3",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "jose": "^5.2.3",
