--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -209,6 +209,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GHCR_TOKEN }}
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
@@ -235,7 +237,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GHCR_TOKEN }}
           commit-message: "chore: auto-translate to multiple languages"
           branch: translations-update
           delete-branch: true
